--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 2</title>
+    <link rel="stylesheet" href="flatpickr.min.css" />
+    <link rel="stylesheet" href="iziToast.min.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+
+    <title>1-timer</title>
   </head>
   <body>
     <section>
       <a href="./index.html">Go to home</a>
-      <h1>Welcome to page 2</h1>
+
+      <ul>
+        <li><a href="1-timer.html"> timer</a></li>
+        <li><a href="2-snakbar.html"> snakbar</a></li>
+      </ul>
     </section>
+
     <input type="text" id="datetime-picker" />
     <button type="button" data-start>Start</button>
 
@@ -32,5 +41,9 @@
         <span class="label">Seconds</span>
       </div>
     </div>
+
+    <script src="flatpickr.min.css" type="text/javascript"></script>
+    <script src="iziToast.min.js" type="text/javascript"></script>
+    <script type="module" src="./js/1-timer.js"></script>
   </body>
 </html>
