--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="flatpickr.min.css" />
+    <link rel="stylesheet" href="iziToast.min.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+
     <title>Page 3</title>
   </head>
   <body>
@@ -11,5 +16,6 @@
       <a href="./index.html">Go to home</a>
       <h1>Welcome to page 3</h1>
     </section>
+    <script src="./js/2-snackbar.js" type="module"></script>
   </body>
 </html>
