--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -16,8 +16,8 @@
       <a href="./index.html">Go to home</a>
     </section>
 
-    <input type="text" id="datetime-picker" />
-    <button type="button" data-start>Start</button>
+    <input class="input" type="text" id="datetime-picker" />
+    <button class="button" type="button" data-start>Start</button>
 
     <div class="timer">
       <div class="field">
