--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -5,39 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="flatpickr.min.css" />
-    <link rel="stylesheet" href="iziToast.min.css" />
+    <!-- <link rel="stylesheet" href="flatpickr.min.css" /> -->
+    <!-- <link rel="stylesheet" href="iziToast.min.css" /> -->
     <link rel="stylesheet" href="./css/styles.css" />
 
-    <title>Page 3</title>
+    <title>2-snackbar</title>
   </head>
+
   <body>
     <section>
       <a href="./index.html">Go to home</a>
-      <h1>Welcome to page 3</h1>
+      <h1>Welcome to snackbar</h1>
+
+      <form class="form">
+        <label>
+          Delay (ms)
+          <input type="number" name="delay" required />
+        </label>
+
+        <fieldset>
+          <legend>State</legend>
+          <label>
+            <input type="radio" name="state" value="fulfilled" required />
+            Fulfilled
+          </label>
+          <label>
+            <input type="radio" name="state" value="rejected" required />
+            Rejected
+          </label>
+        </fieldset>
+
+        <button type="submit">Create notification</button>
+      </form>
     </section>
-
-    <form class="form">
-      <label>
-        Delay (ms)
-        <input type="number" name="delay" required />
-      </label>
-
-      <fieldset>
-        <legend>State</legend>
-        <label>
-          <input type="radio" name="state" value="fulfilled" required />
-          Fulfilled
-        </label>
-        <label>
-          <input type="radio" name="state" value="rejected" required />
-          Rejected
-        </label>
-      </fieldset>
-
-      <button type="submit">Create notification</button>
-    </form>
-
     <script src="./js/2-snackbar.js" type="module"></script>
   </body>
 </html>
