--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -15,7 +15,7 @@
   <body>
     <section>
       <a href="./index.html">Go to home</a>
-      <h1>Welcome to snackbar</h1>
+      <!-- <h1>Welcome to snackbar</h1> -->
     </section>
 
     <form class="form">
@@ -36,7 +36,7 @@
         </label>
       </fieldset>
 
-      <button type="submit">Create notification</button>
+      <button type="submit" class="btn">Create notification</button>
     </form>
 
     <script src="./js/2-snackbar.js" type="module"></script>
