--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <nav>
       <ul>
         <li><a href="./1-timer.html"> timer</a></li>
-        <li><a href="./2-snakbar.html"> snakbar</a></li>
+        <li><a href="./2-snackbar.html"> snakbar</a></li>
       </ul>
     </nav>
 
